--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -2,94 +2,124 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1080.0" scaleShape="false" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.control.FXMLSearchPageSceneController">
    <children>
-      <VBox prefHeight="600.0" prefWidth="1080.0">
+      <HBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="1080.0">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="550.0" prefWidth="1080.0">
+            <VBox prefHeight="600.0" prefWidth="330.0">
                <children>
-                  <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="330.0">
-                     <children>
-                        <Label text="Search by Name">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </Label>
-                        <TextField prefHeight="26.0" prefWidth="100.0" promptText="Type a product name" />
-                        <ChoiceBox prefWidth="250.0" />
-                        <ButtonBar prefHeight="40.0" prefWidth="200.0">
-                          <buttons>
-                            <Button mnemonicParsing="false" text="Refresh">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Button>
-                          </buttons>
-                        </ButtonBar>
-                     </children>
-                  </VBox>
-                  <VBox prefHeight="600.0" prefWidth="750.0">
-                     <children>
-                        <MenuBar>
-                          <menus>
-                            <Menu mnemonicParsing="false" text="Lementett profilok">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="Close" />
-                              </items>
-                            </Menu>
-                            <Menu mnemonicParsing="false" text="Összehasonlítás">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
-                              </items>
-                            </Menu>
-                            <Menu mnemonicParsing="false" text="Help">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                              </items>
-                            </Menu>
-                          </menus>
-                        </MenuBar>
-                        <TableView prefHeight="600.0" prefWidth="750.0">
+                  <Label text="Search by Name">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="keywordTextField" prefHeight="26.0" prefWidth="100.0" promptText="Type a product name">
+                     <VBox.margin>
+                        <Insets right="25.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Label layoutX="136.0" layoutY="87.0" text="Keresendő komponens">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </Label>
+                  <ChoiceBox fx:id="ComponentChoiceBox" prefWidth="280.0">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <Line endX="140.0" startX="-140.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </VBox.margin>
+                  </Line>
+                  <Label text="Maximum ár">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </Label>
+                  <Slider majorTickUnit="50.0" max="1000.0" minorTickCount="10" prefHeight="14.0" prefWidth="100.0" showTickLabels="true" snapToTicks="true" value="900.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets right="25.0" />
+                     </VBox.margin>
+                  </Slider>
+                <Button mnemonicParsing="false" text="Refresh">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="210.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <padding>
+                  <Insets left="25.0" />
+               </padding>
+            </VBox>
+            <TabPane prefHeight="200.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="30.0" tabMinWidth="100.0">
+              <tabs>
+                <Tab text="Összeállítás">
+                     <content>
+                        <TableView fx:id="productTableView" prefHeight="600.0" prefWidth="750.0">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="Brand" />
-                              <TableColumn prefWidth="75.0" text="Series" />
-                              <TableColumn prefWidth="75.0" text="Model" />
-                              <TableColumn prefWidth="75.0" text="Price" />
-                              <TableColumn prefWidth="75.0" text="Frequency" />
-                              <TableColumn prefWidth="75.0" text="Num. of cores" />
-                              <TableColumn prefWidth="75.0" text="Power" />
-                              <TableColumn prefWidth="75.0" text="Capacity" />
-                              <TableColumn prefWidth="75.0" text="Energy efficiency" />
-                              <TableColumn prefWidth="75.0" text="Socket type" />
-                              <TableColumn prefWidth="75.0" text="Integrated GPU" />
-                              <TableColumn prefWidth="75.0" text="Speed" />
-                              <TableColumn prefWidth="75.0" text="FormFactor" />
-                              <TableColumn prefWidth="75.0" text="Num. of RAM sockets" />
-                              <TableColumn prefWidth="75.0" text="Num. of Modules" />
+                            <TableColumn fx:id="brandTableColumn" prefWidth="75.0" text="Brand" />
+                              <TableColumn fx:id="seriesTableColumn" prefWidth="75.0" text="Series" />
+                              <TableColumn fx:id="modelTableColumn" prefWidth="75.0" text="Model" />
+                              <TableColumn fx:id="priceTableColumn" prefWidth="75.0" text="Price" />
+                              <TableColumn fx:id="frequencyTableColumn" prefWidth="75.0" text="Frequency" />
+                              <TableColumn fx:id="numOfCoresTableColumn" prefWidth="75.0" text="Num. of cores" />
+                              <TableColumn fx:id="powerTableColumn" prefWidth="75.0" text="Power" />
+                              <TableColumn fx:id="capacityTableColumn" prefWidth="75.0" text="Capacity" />
+                              <TableColumn fx:id="energyEfficiencyTableColumn" prefWidth="75.0" text="Energy efficiency" />
+                              <TableColumn fx:id="socketTypeTableColumn" prefWidth="75.0" text="Socket type" />
+                              <TableColumn fx:id="integratedGPUTableColumn" prefWidth="75.0" text="Integrated GPU" />
+                              <TableColumn fx:id="speedTableColumn" prefWidth="75.0" text="Speed" />
+                              <TableColumn fx:id="formFactorTableColumn" prefWidth="75.0" text="FormFactor" />
+                              <TableColumn fx:id="numOfRAMSocketsTableColumn" prefWidth="75.0" text="Num. of RAM sockets" />
+                              <TableColumn fx:id="numOfModulesTableColumn" prefWidth="75.0" text="Num. of Modules" />
                           </columns>
                         </TableView>
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
+                     </content>
+                  </Tab>
+                <Tab text="Lementett konfigok" />
+              </tabs>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </TabPane>
          </children>
-      </VBox>
+      </HBox>
    </children>
 </Pane>
