Táblázat fejléceinek elrejtése a komponens kiválasztása előtt

--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -105,21 +105,21 @@
                            <children>
                               <TableView fx:id="productTableView" prefHeight="515.0" prefWidth="750.0">
                                 <columns>
-                                  <TableColumn fx:id="brandTableColumn" prefWidth="145.59992063045502" text="Brand" />
-                                    <TableColumn fx:id="seriesTableColumn" prefWidth="92.26669311523438" text="Series" />
-                                    <TableColumn fx:id="modelTableColumn" prefWidth="77.86663818359375" text="Model" />
-                                    <TableColumn fx:id="priceTableColumn" prefWidth="64.00006103515625" text="Price" />
-                                    <TableColumn fx:id="frequencyTableColumn" prefWidth="35.199951171875" text="Frequency" />
-                                    <TableColumn fx:id="numOfCoresTableColumn" prefWidth="42.4000244140625" text="Num. of cores" />
-                                    <TableColumn fx:id="powerTableColumn" prefWidth="50.39996337890625" text="Power" />
-                                    <TableColumn fx:id="capacityTableColumn" prefWidth="66.13333129882812" text="Capacity" />
-                                    <TableColumn fx:id="energyEfficiencyTableColumn" prefWidth="81.06658935546875" text="Energy efficiency" />
-                                    <TableColumn fx:id="socketTypeTableColumn" prefWidth="111.73345947265625" text="Socket type" />
-                                    <TableColumn fx:id="integratedGPUTableColumn" prefWidth="75.0" text="Integrated GPU" />
-                                    <TableColumn fx:id="speedTableColumn" prefWidth="75.0" text="Speed" />
-                                    <TableColumn fx:id="formFactorTableColumn" prefWidth="75.0" text="FormFactor" />
-                                    <TableColumn fx:id="numOfRAMSocketsTableColumn" prefWidth="75.0" text="Num. of RAM sockets" />
-                                    <TableColumn fx:id="numOfModulesTableColumn" prefWidth="75.0" text="Num. of Modules" />
+                                  <TableColumn fx:id="brandTableColumn" prefWidth="145.59992063045502" text="Brand" visible="false" />
+                                    <TableColumn fx:id="seriesTableColumn" prefWidth="92.26669311523438" text="Series" visible="false" />
+                                    <TableColumn fx:id="modelTableColumn" prefWidth="77.86663818359375" text="Model" visible="false" />
+                                    <TableColumn fx:id="priceTableColumn" prefWidth="64.00006103515625" text="Price" visible="false" />
+                                    <TableColumn fx:id="frequencyTableColumn" prefWidth="35.199951171875" text="Frequency" visible="false" />
+                                    <TableColumn fx:id="numOfCoresTableColumn" prefWidth="42.4000244140625" text="Num. of cores" visible="false" />
+                                    <TableColumn fx:id="powerTableColumn" prefWidth="50.39996337890625" text="Power" visible="false" />
+                                    <TableColumn fx:id="capacityTableColumn" prefWidth="66.13333129882812" text="Capacity" visible="false" />
+                                    <TableColumn fx:id="energyEfficiencyTableColumn" prefWidth="81.06658935546875" text="Energy efficiency" visible="false" />
+                                    <TableColumn fx:id="socketTypeTableColumn" prefWidth="111.73345947265625" text="Socket type" visible="false" />
+                                    <TableColumn fx:id="integratedGPUTableColumn" prefWidth="75.0" text="Integrated GPU" visible="false" />
+                                    <TableColumn fx:id="speedTableColumn" prefWidth="75.0" text="Speed" visible="false" />
+                                    <TableColumn fx:id="formFactorTableColumn" prefWidth="75.0" text="FormFactor" visible="false" />
+                                    <TableColumn fx:id="numOfRAMSocketsTableColumn" prefWidth="75.0" text="Num. of RAM sockets" visible="false" />
+                                    <TableColumn fx:id="numOfModulesTableColumn" prefWidth="75.0" text="Num. of Modules" visible="false" />
                                 </columns>
                               </TableView>
                               <Button mnemonicParsing="false" text="Komponens hozzáadása">
