--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -135,9 +135,8 @@
                      <content>
                         <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <TableView nodeOrientation="LEFT_TO_RIGHT" prefHeight="515.0" prefWidth="750.0">
+                              <TableView fx:id="ActualConfigTableView" nodeOrientation="LEFT_TO_RIGHT" prefHeight="515.0" prefWidth="750.0">
                                  <columns>
-                                    <TableColumn fx:id="ActualConfigNameTableColumn" prefWidth="123.20001068115243" text="Konfiguráció neve" />
                                     <TableColumn fx:id="ActualConfigProcessorTableColumn" prefWidth="122.4001235961914" text="Processzor" />
                                     <TableColumn fx:id="ActualConfigMotherboardTableColumn" prefWidth="110.39990234375" text="Alaplap" />
                                     <TableColumn fx:id="ActualConfigPowerSupplyTableColumn" prefWidth="125.066650390625" text="Tápegység" />
@@ -146,11 +145,27 @@
                                     <TableColumn fx:id="ActualConfigPriceTableColumn" prefWidth="65.066650390625" text="Ár" />
                                  </columns>
                               </TableView>
-                              <Button mnemonicParsing="false" text="Komponens törlése">
+                              <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label text="Konfiguráció neve">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField>
+                                       <HBox.margin>
+                                          <Insets right="370.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                    <Button mnemonicParsing="false" onMouseClicked="#handleAddButtonClicked" text="Komponens törlése" />
+                                 </children>
                                  <VBox.margin>
-                                    <Insets right="20.0" top="10.0" />
+                                    <Insets />
                                  </VBox.margin>
-                              </Button>
+                                 <padding>
+                                    <Insets top="10.0" />
+                                 </padding>
+                              </HBox>
                            </children>
                         </VBox>
                      </content>
