--- a/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLSearchPageScene.fxml
@@ -122,7 +122,7 @@
                                     <TableColumn fx:id="numOfModulesTableColumn" prefWidth="75.0" text="Num. of Modules" visible="false" />
                                 </columns>
                               </TableView>
-                              <Button mnemonicParsing="false" text="Komponens hozzáadása">
+                              <Button mnemonicParsing="false" onMouseClicked="#handleAddComponentButtonClicked" text="Komponens hozzáadása">
                                  <VBox.margin>
                                     <Insets right="20.0" top="10.0" />
                                  </VBox.margin>
@@ -143,17 +143,17 @@
                                     <Insets top="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <TableView prefHeight="70.0" prefWidth="640.0">
+                              <TableView fx:id="ActualProcessorTable" prefHeight="70.0" prefWidth="640.0">
                                  <columns>
-                                    <TableColumn fx:id="brandTableColumn1" prefWidth="84.79998624324799" text="Brand" />
-                                    <TableColumn fx:id="seriesTableColumn1" prefWidth="91.20001983642578" text="Series" />
-                                    <TableColumn fx:id="modelTableColumn1" prefWidth="116.79998779296875" text="Model" />
-                                    <TableColumn fx:id="priceTableColumn1" prefWidth="118.4000244140625" text="Price" />
-                                    <TableColumn fx:id="frequencyTableColumn1" prefWidth="65.5999755859375" text="Frequency" />
-                                    <TableColumn fx:id="numOfCoresTableColumn1" prefWidth="45.600006103515625" text="Num. of cores" />
-                                    <TableColumn fx:id="powerTableColumn1" prefWidth="59.199951171875" text="Power" />
-                                    <TableColumn fx:id="socketTypeTableColumn1" prefWidth="67.199951171875" text="Socket type" />
-                                    <TableColumn fx:id="integratedGPUTableColumn1" prefWidth="106.39984130859375" text="Integrated GPU" />
+                                    <TableColumn fx:id="processorBrandTableColumn" prefWidth="84.79998624324799" text="Brand" />
+                                    <TableColumn fx:id="processorSeriesTableColumn" prefWidth="91.20001983642578" text="Series" />
+                                    <TableColumn fx:id="processorModelTableColumn" prefWidth="116.79998779296875" text="Model" />
+                                    <TableColumn fx:id="processorPriceTableColumn" prefWidth="118.4000244140625" text="Price" />
+                                    <TableColumn fx:id="processorFrequencyTableColumn" prefWidth="65.5999755859375" text="Frequency" />
+                                    <TableColumn fx:id="processorNumOfCoresTableColumn" prefWidth="45.600006103515625" text="Num. of cores" />
+                                    <TableColumn fx:id="processorPowerTableColumn" prefWidth="59.199951171875" text="Power" />
+                                    <TableColumn fx:id="processorSocketTypeTableColumn" prefWidth="67.199951171875" text="Socket type" />
+                                    <TableColumn fx:id="processorIntegratedGPUTableColumn" prefWidth="106.39984130859375" text="Integrated GPU" />
                                  </columns>
                               </TableView>
                               <Label text="Tápegység">
@@ -249,7 +249,7 @@
                                           <Insets left="20.0" />
                                        </HBox.margin>
                                     </Button>
-                                    <Button mnemonicParsing="false" onMouseClicked="#handleAddButtonClicked" text="Komponens törlése">
+                                    <Button mnemonicParsing="false" onMouseClicked="#handleDeleteComponentButtonClicked" text="Komponens törlése">
                                        <HBox.margin>
                                           <Insets left="275.0" />
                                        </HBox.margin>
